# novaspace

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: current-state.md
examples/: constellation_demo.py
src/novaspace/: __init__.py  hyperspace.py
