[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novaspace"
version = "0.1.0"
description = "NovaSpace — Hyperspace, NovaNet constellation coordination, long-range resonant networking and space-scale vision layer for the Nexus AI swarms / xMesh / QNET / Esslinger & Co. decentralized ecosystem."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sven Normen Esslinger / Esslinger & Co." }
]
requires-python = ">=3.11"
keywords = [
    "novaspace", "hyperspace", "constellation", "nova-net", "mesh-network", "yggdrasil",
    "nexus", "lyra", "ai-agents", "swarm-intelligence", "decentralized",
    "emotional-ai", "resonance", "qnet", "space-network"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]

dependencies = [
    "aiohttp>=3.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/digitaldesignerjazz/novaspace"
Repository = "https://github.com/digitaldesignerjazz/novaspace"
Issues = "https://github.com/digitaldesignerjazz/novaspace/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
